--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ canvas {
   padding: 20px;
   flex-direction: row;
 }
-.button {
+/* .button {
   display: inline-block;
   font-size: 16px;
   font-weight: bold;
@@ -39,23 +39,39 @@ canvas {
   word-spacing: normal;
   letter-spacing: 5px;
   border: 1px solid white;
-  /* background: black; */
+  /* background: black;
   background: none;
   cursor: pointer;
-}
+} */
 
-/* 이 밑으로 싹다 새코드임. 전 코드는 실수로 지워버림.. */
+/* 이 밑으로 싹다 새코드임. 전 코드는 실수로 지워버림..
 .text-box {
   text-align: center; /* 전체 텍스트 박스 내부의 콘텐츠를 가운데 정렬 */
 }
 
-.button a {
-  display: inline-block; /* 버튼 이미지를 인라인 블록으로 설정 */
-  text-decoration: none; /* 링크 밑줄 제거 */
+/* .button a {
+  display: inline-block; /* 버튼 이미지를 인라인 블록으로 설정
+  text-decoration: none; /* 링크 밑줄 제거
   margin: 0 auto; /* 이미지를 가운데 정렬 */
 }
 
-.button img {
-  width: 175px; /* 이미지를 원래 크기로 유지 (필요시 조정 가능) */
+/* .button img {
+  width: 175px; /* 이미지를 원래 크기로 유지 (필요시 조정 가능)
   height: auto;
-}
+} */
+
+.button {
+  padding: 0.6em 1em;
+  border: 4px solid #fa725a;
+  transition: ease-in-out 0.3s;
+  background-color: transparent;
+  color: #fa725a;
+  font-weight: bolder;
+  font-size: 16px;
+ }
+ 
+ .button:hover {
+  transform: scale(1.2) rotate(10deg);
+  background-color: #fa725a;
+  color: white;
+ }
